@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company
class Ship
class ShipDynData

Company "1" -- "*" Ship: contains >
Ship "1" -- "*" ShipDynData: has >

class Company {

}

class Ship{
 - mmsi
 - shipName
 - imo
 - callSign
 - vesselType
 - length
 - width
 - capacity
 - draft
}

class ShipDynData{
 - baseDateTime
 - latitude
 -longitude
 -sog
 -cog
 -heading
 -position
 -cargo
 -transceiver
}

@enduml